Add status bar icon for HAC
Display icon for HAC (Hearing Aid Compatibility) in status bar,
when HAC is turned on.

Test: Connect a HAC device and toggle on and off.
Change-Id: Idfe217b496c22d0ee662aad54001747b6f3f1463

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -40,6 +40,7 @@
         <item><xliff:g id="id">@string/status_bar_bluetooth</xliff:g></item>
         <item><xliff:g id="id">@string/status_bar_nfc</xliff:g></item>
         <item><xliff:g id="id">@string/status_bar_tty</xliff:g></item>
+        <item><xliff:g id="id">@string/status_bar_hac</xliff:g></item>
         <item><xliff:g id="id">@string/status_bar_speakerphone</xliff:g></item>
         <item><xliff:g id="id">@string/status_bar_zen</xliff:g></item>
         <item><xliff:g id="id">@string/status_bar_mute</xliff:g></item>
@@ -68,6 +69,7 @@
     <string translatable="false" name="status_bar_bluetooth">bluetooth</string>
     <string translatable="false" name="status_bar_nfc">nfc</string>
     <string translatable="false" name="status_bar_tty">tty</string>
+    <string translatable="false" name="status_bar_hac">hac</string>
     <string translatable="false" name="status_bar_speakerphone">speakerphone</string>
     <string translatable="false" name="status_bar_zen">zen</string>
     <string translatable="false" name="status_bar_mute">mute</string>
