--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2461,6 +2461,7 @@
   <java-symbol type="string" name="status_bar_bluetooth" />
   <java-symbol type="string" name="status_bar_nfc" />
   <java-symbol type="string" name="status_bar_tty" />
+  <java-symbol type="string" name="status_bar_hac" />
   <java-symbol type="string" name="status_bar_speakerphone" />
   <java-symbol type="string" name="status_bar_zen" />
   <java-symbol type="string" name="status_bar_mute" />
