Decide the number of signal strength bar to display based on RSCP
Introduce a config array which contains RSCP threshold values. Based on
them, judge the number of signal strength bar to display.

Bug: 29428266
Change-Id: I2c65f44f0eeff183992f7e1a0df642adaeb4c930

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2379,4 +2379,13 @@
     <!-- The BT name of the keyboard packaged with the device. If this is defined, SystemUI will
          automatically try to pair with it when the device exits tablet mode. -->
     <string translatable="false" name="config_packagedKeyboardName"></string>
+
+    <!-- Thresholds for Umts Dbm in status bar -->
+    <!-- "2147483647" is invalid value of RSCP. -->
+    <integer-array name="config_umtsDbmThresholds">
+        <item>2147483647</item>   <!-- SIGNAL_STRENGTH_GREAT -->
+        <item>2147483647</item>   <!-- SIGNAL_STRENGTH_GOOD -->
+        <item>2147483647</item>   <!-- SIGNAL_STRENGTH_MODERATE -->
+        <item>2147483647</item>   <!-- SIGNAL_STRENGTH_POOR -->
+    </integer-array>
 </resources>
