Add voip audio mode configuration for ims call
Add config_use_voip_mode_for_ims key. Set to false if ims
audio routing is via modem; set to true if it is via rtp
stream.

Change-Id: I539d24d1d666b2d61a4a92d5b1e3fb762a2766dc

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2165,6 +2165,9 @@
          provisioning, availability etc -->
     <bool name="config_carrier_wfc_ims_available">false</bool>
 
+    <!-- Whether to use voip audio mode for ims call -->
+    <bool name="config_use_voip_mode_for_ims">false</bool>
+
     <bool name="config_networkSamplingWakesDevice">true</bool>
 
     <string-array translatable="false" name="config_cdma_home_system" />
